Changed link directories

--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
 
           <div class="row mt-4 ">
             <div class="col-sm-12 col-md-12 col-lg-6 mt-4">
-              <!-- LINKS TO SCHOLAR MATERIALS -->
+              <!-- SCHOLAR MATERIALS -->
               <a type="button" class="btnresource" data-aos="fade-up" data-aos-delay="200"
-                href="https://baseinitiativemy.notion.site/The-Scholar-s-Guide-5c13a840eb6d40af99cd38b74f7bdc20"
+                href="https://kerismy.notion.site/056694584e5c458993ab6061e6dfdc7a?v=fe7a502186bc464ea21e3f350cab69ce&pvs=4"
                 target="_blank">
                 <span class="btnresource_icon">
                   <i class="ion-ios-book" style="transform: translate(2px, 0);"></i>
@@ -177,7 +177,7 @@
             <div class="col-sm-12 col-md-12 col-lg-6 mt-4">
               <!-- LINKS TO SCHOLARS -->
               <a type="button" class="btnresource" data-aos="fade-up" data-aos-delay="200"
-                href="https://baseinitiativemy.notion.site/Post-SPM-Checklist-7ab71be221044858a31b31515a066555"
+                href="https://kerismy.notion.site/Scholars-Dashboard-907e3f0cea1745f7ab4796d9dfbc4d99?pvs=4"
                 target="_blank">
                 <span class="btnresource_icon">
                   <i class="ion-ios-people" style="transform: translate(0px, 0);"></i>
