Changed target of Linktree

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </h2>
           <div data-aos="fade-up" data-aos-delay="800">
             <a href="https://linktr.ee/keris.my" data-aos="fade-up" data-aos-delay="1000"
-              class=" btn-get-started scrollto">
+              class=" btn-get-started scrollto" target="_blank">
               Check Out Our <b>Linktree</b>!
             </a>
           </div>
@@ -659,26 +659,10 @@
 
         <div class="row d-flex justify-content-center">
 
-          <!-- EMAIL -->
-          <div class="col-lg-4 col-md-10 col-sm-12" data-aos="fade-up" data-aos-delay="100">
-            <div class="contact-about">
-              <h3>Email</h3>
-              <p>For more information, don't hesitate to contact us!</p>
-            </div>
-            <div class="info">
-
-              <div>
-                <i class="ri-mail-send-line"></i>
-                <p>kerisinitiative@gmail.com</p>
-              </div>
-
-            </div>
-          </div>
-
           <!-- IG -->
           <div class="col-lg-4 col-md-10 col-sm-12" data-aos="fade-up" data-aos-delay="100">
             <div class="contact-about">
-              <h3>Instagram</h3>
+              <h3 class="text-center">Instagram</h3>
               <p>The latest updates and pictures are all here!</p>
             </div>
             <a href="https://www.instagram.com/kerismy/" target="_blank">
@@ -694,7 +678,7 @@
           <!-- TIKTOK -->
           <div class="col-lg-4 col-md-10 col-sm-12" data-aos="fade-up" data-aos-delay="100">
             <div class="contact-about">
-              <h3>Tiktok</h3>
+              <h3 class="text-center">Tiktok</h3>
               <p>Funny videos and memes about scholarships are all posted here!</p>
             </div>
             <a href="https://www.tiktok.com/@keris.my?lang=en" target="_blank">
@@ -705,6 +689,22 @@
                 </div>
               </div>
             </a>
+          </div>
+
+          <!-- EMAIL -->
+          <div class="col-lg-4 col-md-10 col-sm-12" data-aos="fade-up" data-aos-delay="100">
+            <div class="contact-about">
+              <h3 class="text-center">Email</h3>
+              <p>For more information, don't hesitate to contact us!</p>
+            </div>
+            <div class="info">
+
+              <div>
+                <i class="ri-mail-send-line"></i>
+                <p>kerisinitiative@gmail.com</p>
+              </div>
+
+            </div>
           </div>
 
           <!--
